--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,3 +26,21 @@ jobs:
       run: ./gradlew assembleQuickstepLawnchair
       
       
+      
+      
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        # Artifact name
+        name: 上传APK文件夹
+        # A file, directory or wildcard pattern that describes what to upload
+        path: build/outputs/apk
+        # Duration after which artifact will expire in days. 0 means using default retention. Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
+        retention-days: 50
+        if-no-files-found: error
+
+    
+    
+
+      
+      
