--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew assembleQuickstepLawnchair
+#       run: ./gradlew assembleQuickstepLawnchair
+      run: ./gradlew assembleAosp
       
       
       
